--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,23 @@
   font-size: calc(10px + 2vmin);
   color: #000;
 }
+
+.Button-calc {
+  background: #32383E;
+  color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  width: 250px;
+  padding: 12px 0;
+  margin-top: 40px;
+}
+
+.Output-paragraph {
+  color: #fff;
+  background: #32383E;
+  text-align: center;
+  font-weight: 600;
+  border-radius: 60px;
+  min-width: 300px;
+  padding: 10px 0px;
+}
